# tavern

./: Cargo.toml  LICENSE  Trunk.toml  addOneToAndroidversionCode.js  android_versionCode.js  index.html  tavern-6a5441d77997b37b.js  tavern-758255d99b198c2a.js  tavern-7b04b02a29fa43b9.js  tavern-b00fdc2be2cf0f8.js  tavern-d24e0be99015402d.js  tavern-def61a38574914f3.js  tavern-f76d115421275cd2.js
.github/workflows/: ci.yml  deploy-page.yaml  release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
mobile/: Cargo.toml  Makefile  manifest.yaml
mobile/mobile.xcodeproj/: project.pbxproj
mobile/src/: lib.rs
src/: audio.rs  ingame.rs  lib.rs  loading.rs  main.rs  menu.rs  player.rs
src/actions/: mod.rs
src/ingame/: bar.rs  customer.rs  mod.rs  pause_menu.rs
src/menu/: mod.rs  settings.rs
