[package]
name = "mobile"
version = "0.1.2"
edition = "2021"
publish = false

[lib]
name = "mobile"
crate-type = ["staticlib", "cdylib"]

[dependencies]
tavern = { path = ".." } # Done
bevy = { version = "0.12", default-features = false }

# As long as Kira doesn't expose a feature for this, we need to enable it
# See https://github.com/tesselode/kira/pull/51
[target."cfg(target_os = \"android\")".dependencies.cpal]
version = "0.15"
features = ["oboe-shared-stdcxx"]

[package.metadata.android]
package = "me.fakuv.tavern"  # Done
apk_name = "Tavern"  # Done same as GAME_OSX_APP_NAME in release workflow
assets = "../assets"
strip = "strip"
resources = "../build/android/res"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 33

[package.metadata.android.application]
icon = "@mipmap/icon"
label = "Tavern" # Done
orientation = "landscape" # landscape for android